@@ -401,7 +401,7 @@ module URI
       # host          = hostname | IPv4address | IPv6reference (RFC 2732)
       ret[:HOST] = host = "(?:#{hostname}|#{ipv4addr}|#{ipv6ref})"
       # port          = *digit
-      port = '\d*'
+      ret[:PORT] = port = '\d*'
       # hostport      = host [ ":" port ]
       ret[:HOSTPORT] = hostport = "#{host}(?::#{port})?"
 
